# GLTask3

./: BaseButton.qml  CMakeLists.txt  Controlpanel.qml  CustomSlider.qml  Imagebutton.qml  LibraryZone.qml  MenuBarPlayer.qml  README.md  TimeSlider.qml  VideoPlayer.qml  filedriver.cpp  filedriver.h  filefinder.cpp  filefinder.h  library.cpp  library.h  main.cpp  main.qml  mediaPkayer.cpp  mediaPkayer.h  mediaplayer.cpp  mediaplayer.h  mediaplayercontroller.cpp  mediaplayercontroller.h  playlist.cpp  uicontroller.cpp  uicontroller.h  videooutput.cpp
Qml/: Controlpanel.qml  Imagebutton.qml  LibraryZone.qml  MenuBarPlayer.qml  TimeSlider.qml  VideoPlayer.qml  main.qml
Sources/: audiooutput.cpp  audiooutput.h  filedriver.cpp  filedriver.h  library.cpp  library.h  mediaplayer.cpp  mediaplayer.h  playlist.h
